ultimos cambios antes de la entrega

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,14 @@
   padding: 0;
 }
 
+h1{
+  color: #fff;
+}
+
+label{
+  color: #fff;
+}
+
 a {
   color: #fff;
   text-decoration: none;
@@ -38,9 +46,19 @@ a:hover {
 main {
   background: black;
   background-size: cover;
-  height: 92vh;
+  height: 200vh;
 } 
 
 p{
   color: white;
+}
+
+section{
+  background-color: #23232e;
+
+}
+
+section div{
+  display: flex;
+  flex-wrap: wrap;
 }
